B'H Add discoverable mission rooms
